<resources>
    <string name="app_name">Github User Search</string>
    <string name="search_hint">Search User</string>
    <string name="no_data">No User Data Found</string>
    <string name="search_github_user">Search Github User</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="user_detail">User Detail</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="dash">-</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="change_language_setting">Change language setting</string>
    <string name="favorite">Favorite User</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="alert_delete_favorite">Are you sure you want to delete this user from favorite list?</string>
    <string name="title_delete_favorite">Delete Favorite</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_fail_delete">Fail to delete data</string>
    <string name="alert_success_delete">Data has been successfully deleted</string>
    <string name="title_activity_settings">Settings</string>
    <string name="key_language" translatable="false">settingLanguage</string>
    <string name="setting_language">Change Language</string>
    <string name="key_notification" translatable="false">settingNotification</string>
    <string name="setting_notification">Periodic Notification</string>
    <string name="notif_message">Let\'s find popular user on GitHub!</string>
    <string name="title_activity_splash" translatable="false">Splash Activity</string>
    <string name="by_hardiansyah" translatable="false">by Hardiansyah</string>
</resources>